--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
   <div class="nav-container">
 
     <div class="nav-left">
-      <button class="menu-btn" onclick="toggleMobileMenu()">☰</button>
+      <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
       <a href="index.html" class="logo-text">Pulse Dance Co.</a>
     </div>
 
