--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ================= SEO FOR ABOUT PAGE ================= -->
-    <title>About Pulse Dance Company | Our Story, Mission & Team</title>
+    <title>About Pulse Dance Company | Our Story, Mission, Team & Why Choose Us</title>
 
-    <meta name="description" content="Learn about Pulse Dance Company – our journey, mission, vision, and values. Meet our founders, instructors, and award-winning choreographers shaping the next generation of dancers." />
-    <meta name="keywords" content="about Pulse Dance Company, dance academy history, dance instructors NYC, choreography team, dance awards, mission vision dance studio" />
+    <meta name="description" content="Learn about Pulse Dance Company – our journey, mission, vision, values, and the reasons why dancers choose us. Meet our founders, instructors, and award-winning choreographers shaping the next generation of dancers." />
+    <meta name="keywords" content="about Pulse Dance Company, why choose Pulse Dance Company, best dance academy NYC, dance instructors NYC, choreography team, dance awards, mission vision dance studio" />
     <meta name="author" content="Pulse Dance Company" />
 
     <!-- SOCIAL PREVIEW -->
-    <meta property="og:title" content="About Pulse Dance Company – Our Story & Team" />
-    <meta property="og:description" content="Discover our journey, meet our instructors, and explore the values that make Pulse Dance Company a premier dance academy in NYC." />
+    <meta property="og:title" content="About Pulse Dance Company – Our Story, Team & Why Choose Us" />
+    <meta property="og:description" content="Discover our journey, meet our instructors, and learn why Pulse Dance Company is a premier dance academy in NYC." />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -36,7 +36,7 @@
   <div class="nav-container">
 
     <div class="nav-left">
-      <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
+      <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
       <a href="index.html" class="logo-text">Pulse Dance Co.</a>
     </div>
 
@@ -67,7 +67,6 @@
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">About Us</p>
     <h1 class="text-4xl font-bold mt-4">Pulse Dance Company</h1>
 
-    <!-- COMPANY HISTORY -->
     <p class="text-slate-300 mt-4 max-w-3xl">
       Founded in 2010, Pulse Dance Company began as a small group of passionate artists with a dream to create a space where dancers could grow, express, and perform without limits. Over the years, we have evolved into one of New York’s most respected dance academies, known for blending technical excellence with creative storytelling.
     </p>
@@ -113,6 +112,25 @@
 
   <div class="gallery-card h-full">
     <img src="https://images.unsplash.com/photo-1488218576539-6c658c709f0e?auto=format&fit=crop&w=1200&q=80" alt="Dance instructors training students" class="h-full" />
+  </div>
+</section>
+
+<!-- ================= WHY CHOOSE US ================= -->
+<section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24 reveal">
+  <div class="glass rounded-3xl p-8 md:p-10">
+    <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Why Choose Us</p>
+    <h2 class="text-3xl font-semibold mt-3">What Makes Pulse Dance Company Different</h2>
+
+    <p class="text-slate-400 mt-3 max-w-3xl">
+      At Pulse Dance Company, we go beyond teaching steps — we build confident performers and passionate artists. Our students choose us for our commitment to quality, creativity, and real-world dance exposure.
+    </p>
+
+    <ul class="mt-6 space-y-3 text-sm text-slate-300">
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Industry-experienced instructors and choreographers</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Professional-level studios with performance-ready training</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Career guidance, auditions prep & portfolio building</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Inclusive, supportive, and motivating dance community</li>
+    </ul>
   </div>
 </section>
 
@@ -182,13 +200,6 @@
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
       </div>
-
-      <!-- <div class="footer-col">
-        <h4>Programs</h4>
-        <a href="classes.html">Dance Classes</a>
-        <a href="classes.html#crews">Crews</a>
-        <a href="classes.html#private">Private Training</a>
-      </div> -->
 
       <div class="footer-col">
         <h4>Contact</h4>
