--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,7 @@
     <div class="nav-right" id="desktop-menu">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
+       <a href="services.html">Services</a>
       <a href="policies.html">Policies</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html" class="nav-btn">Enroll Now</a>
@@ -51,6 +52,7 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+     <a href="services.html">Services</a>
     <a href="policies.html">Policies</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html" class="mobile-btn">Enroll Now</a>
@@ -158,6 +160,7 @@
         <h4>Pages</h4>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
         <a href="policies.html">Policies</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
