--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
     <div class="nav-right" id="desktop-menu">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
+       <a href="services.html">Services</a>
       <a href="policies.html">Policies</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html" class="nav-btn">Enroll Now</a>
@@ -52,6 +53,7 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+     <a href="services.html">Services</a>
     <a href="policies.html">Policies</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html" class="mobile-btn">Enroll Now</a>
@@ -196,6 +198,7 @@
         <h4>Pages</h4>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
         <a href="policies.html">Policies</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
