--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="nav-right" id="desktop-menu">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
+      <a href="services.html">Services</a>
       <a href="policies.html">Policies</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html" class="nav-btn">Enroll Now</a>
@@ -56,6 +57,7 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+    <a href="services.html">Services</a>
     <a href="policies.html">Policies</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html" class="mobile-btn">Enroll Now</a>
@@ -154,7 +156,7 @@
 
 
     <!-- RIGHT IMAGE -->
-    <div class="relative">
+    <!-- <div class="relative">
       <div class="absolute -inset-6 bg-gradient-to-br from-accent/20 to-accent-2/20 blur-3xl"></div>
       <div class="relative glass rounded-3xl overflow-hidden border border-accent/20">
         <img src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?auto=format&fit=crop&w=1200&q=80" alt="Dance performance at Pulse Dance Company" class="w-full h-full object-cover" />
@@ -162,7 +164,7 @@
     </div>
 
   </div>
-</section>
+</section> -->
 
 <!-- ================= STYLES ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24 reveal">
@@ -273,6 +275,7 @@
         <h4>Pages</h4>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
         <a href="policies.html">Policies</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
