--- a/about.html
+++ b/about.html
@@ -112,9 +112,9 @@
     </ul>
   </div>
 
-  <div class="gallery-card h-full">
+  <!-- <div class="gallery-card h-full">
     <img src="https://images.unsplash.com/photo-1488218576539-6c658c709f0e?auto=format&fit=crop&w=1200&q=80" alt="Dance instructors training students" class="h-full" />
-  </div>
+  </div> -->
 </section>
 
 <!-- ================= WHY CHOOSE US ================= -->
