--- a/index.html
+++ b/index.html
@@ -121,33 +121,41 @@
 </section>
 
 <!-- ================= ABOUT (SHORT) ================= -->
-<section class="home-section">
-  <h2>About Us</h2>
-  <p>
-    Pulse Dance Company is a leading dance academy in NYC,
-    offering professional training and performance programs.
+<section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24">
+ <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
+  <p class="section-label">About Us</p>
+  <h2>Who We Are</h2>
+
+  <p class="info-text">
+    Pulse Dance Company is a premier dance academy in NYC, dedicated to
+    training confident performers through professional instruction,
+    creative choreography, and real-world stage experience.
   </p>
+
   <a href="about.html" class="read-more-btn">Read More</a>
+  </div>
 </section>
 
-<!-- ================= SERVICES (SHORT) ================= -->
-<section class="home-section">
-  <h2>Our Services</h2>
-  <p>
-    We provide dance classes, choreography services, and
-    professional performance coaching for all levels.
+<section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24">
+  <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
+  <p class="section-label">Our Services</p>
+  <h2>What We Offer</h2>
+
+  <p class="info-text">
+    We deliver high-quality dance education and performance services
+    designed for beginners, professionals, and aspiring artists.
   </p>
 
-  <ul class="services-list">
-    <li>Dance Classes</li>
-    <li>Stage Performances</li>
-    <li>Private Coaching</li>
+  <ul class="info-list">
+    <li>Professional Dance Classes</li>
+    <li>Stage Performances & Shows</li>
+    <li>Private Coaching & Audition Prep</li>
+    <li>Choreography for Events & Schools</li>
   </ul>
 
-  <a href="classes.html" class="read-more-btn">Read More</a>
+  <a href="services.html" class="read-more-btn">Read More</a>
+  </div>
 </section>
-
-<!-- =================================================== -->
 <!-- ============ HOME PAGE SEO CONTENT ================= -->
 <!-- =================================================== -->
 
